Fix grid/list not showing in epiphany when jumplist is shown

--- a/MaterialSkin/HTML/material/html/css/desktop.css
+++ b/MaterialSkin/HTML/material/html/css/desktop.css
@@ -57,6 +57,10 @@
  margin:0px;
 }
 
+.lms-image-grid-jump, .lms-list-jump {
+ margin-left:var(--jump-list-width);
+}
+
 .browse-progress {
  position:fixed;
  top:calc(var(--main-toolbar-height) + ((((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + var(--bottom-toolbar-height)))/2) - 32px));
